wip MaskType and Verify removed explicit dependency on VectorAPI